Bump version, update to java 17