@@ -6,13 +6,13 @@
 
     <groupId>com.freya02</groupId>
     <artifactId>BotCommands</artifactId>
-    <version>2.3.0-SNAPSHOT</version>
+    <version>2.4.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.test.skip>true</maven.test.skip>
         <kotlin.version>1.6.10</kotlin.version>
-        <kotlin.compiler.jvmTarget>16</kotlin.compiler.jvmTarget>
+        <kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
     </properties>
 
     <profiles>
@@ -65,10 +65,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>17</source>
+                    <target>17</target>
                     <compilerArgs>
                         <compilerArg>-parameters</compilerArg>
+                        <compilerArg>--enable-preview</compilerArg>
                     </compilerArgs>
                 </configuration>
                 <executions>
